--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <title>University Campus Space Utilization</title>
     <link rel="stylesheet" href="css/master.css">
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="scripts/master.js"></script>
   </head>
   <body>
+    <h1 class="page-title">Click on a building</h1>
     <div class="campus-image">
-      <a href="b2.html" title="b2" style="position: absolute; left: 80.04%; top: 38.31%; width: 20.07%; height: 28.61%; z-index: 2;"></a><a href="b1.html" title="b1" style="position: absolute; left: 55.3%; top: 69.4%; width: 16.28%; height: 25.37%; z-index: 2;"></a>
+      <a href="b2.html" title="b2" style="position: absolute; left: 80.04%; top: 38.31%; width: 20.07%; height: 28.61%; z-index: 2;"></a>
+      <a href="b1.html" title="b1" style="position: absolute; left: 55.3%; top: 69.4%; width: 16.28%; height: 25.37%; z-index: 2;"></a>
     </div>
   </body>
 </html>
