--- a/b1.html
+++ b/b1.html
@@ -11,14 +11,13 @@
     <script type="text/javascript" src="scripts/master.js"></script>
   </head>
   <body>
+    <a class="back-to-map" href="index.html">back to map</a>
     <h1 class="page-title">Choose Wisely</h1>
     <div class="floorplan-config-selecton" data-building-ac="OS">
       <label>Floor</label>
       <select id="floor">
         <option value="1">1</option>
         <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
       </select>
       <label>Semester</label>
       <select id="semester">
@@ -27,11 +26,11 @@
       </select>
       <label>Year</label>
       <select id="year">
-        <option value="2006">2006</option>
-        <option value="2007">2007</option>
-        <option value="2008">2008</option>
+        <option value="2015">2015</option>
+        <option value="2016">2016</option>
       </select>
       <button>Go</button>
     </div>
+    <iframe class="floorplan" src="OS_Floor_ 1_201510.html"></iframe>
   </body>
 </html>
