--- a/b2.html
+++ b/b2.html
@@ -40,6 +40,6 @@
       </select>
       <button>Go</button>
     </div>
-    <iframe class="floorplan" src="I_Floor_1_201510.html"></iframe>
+    <iframe class="floorplan" src="E_Floor_1.html"></iframe>
   </body>
 </html>
