--- a/b1.html
+++ b/b1.html
@@ -31,6 +31,6 @@
       </select>
       <button>Go</button>
     </div>
-    <iframe class="floorplan" src="I_Floor_1_201510.html"></iframe>
+    <iframe class="floorplan" src="I_Floor_1.html"></iframe>
   </body>
 </html>
