--- a/b1.html
+++ b/b1.html
@@ -16,16 +16,19 @@
     <div class="floorplan-config-selecton" data-building-ac="I">
       <label>Floor</label>
       <select id="floor">
+        <option value="1"> </option>
         <option value="1">1</option>
         <option value="2">2</option>
       </select>
       <label>Semester</label>
       <select id="semester">
+        <option value=""> </option>
         <option value="20">Spring</option>
         <option value="10">Fall</option>
       </select>
       <label>Year</label>
       <select id="year">
+        <option value=""> </option>
         <option value="2015">2015</option>
         <option value="2016">2016</option>
       </select>
