fix one more thing

--- a/b5.html
+++ b/b5.html
@@ -13,7 +13,7 @@
   <body>
     <a class="back-to-map" href="index.html">back to map</a>
     <h1 class="page-title">Make Selection</h1>
-    <div class="floorplan-config-selecton" data-building-ac="E">
+    <div class="floorplan-config-selecton" data-building-ac="C">
       <label>Floor</label>
       <select id="floor">
         <option value="1"> </option>
