fix building labels

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <body>
     <h1 class="page-title">Click on a building</h1>
     <div class="campus-image">
-           <a href="b1.html" title="b1"  style="position: absolute; left: 55.3%; top: 69.4%; width: 16.28%; height: 25.37%; z-index: 2;"></a>
-           <a href="b2.html" title="b2" style="position: absolute; left: 80.04%; top: 38.31%; width: 20.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b3.html" title="b3" style="position: absolute; left: 20.04%; top: 15.31%; width: 10.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b4.html" title="b4" style="position: absolute; left: 67.25%; top: 41.02%; width: 12.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b5.html" title="b5" style="position: absolute; left: 44.25%; top: 69.02%; width: 12.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b6.html" title="b6" style="position: absolute; left: 1.00%; top: 29.50%; width: 12.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b7.html" title="b7" style="position: absolute; left: 61.00%; top: 0.02%; width: 12.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b8.html" title="b8" style="position: absolute; left: 39.04%; top: 40.31%; width: 10.07%; height: 28.61%; z-index: 2;"></a>
-           <a href="b9.html" title="b9" style="position: absolute; left: 27.25%; top: 40.31%; width: 10.07%; height: 28.61%; z-index: 2;"></a>
+           <a href="b1.html" title="I" id="b1" ><div class="posfix"><span class="centerlet">I</span></div></a>
+           <a href="b2.html" title="E" id ="b2" ><div class="posfix"><span class="centerlet">E</span></div></a>
+           <a href="b3.html" title="A" id ="b3" ><div class="posfix"><span class="centerlet">A</span></div></a>
+           <a href="b4.html" title="B" id ="b4" ><div class="posfix"><span class="centerlet">B</span></div></a>
+           <a href="b5.html" title="C" id ="b5" ><div class="posfix"><span class="centerlet">C</span></div></a>
+           <a href="b6.html" title="D" id ="b6" ><div class="posfix"><span class="centerlet">D</span></div></a>
+           <a href="b7.html" title="F" id ="b7" ><div class="posfix"><span class="centerlet">F</span></div></a>
+           <a href="b8.html" title="G" id ="b8" ><div class="posfix"><span class="centerlet">G</span></div></a>
+           <a href="b9.html" title="H" id ="b9" ><div class="posfix"><span class="centerlet">H</span></div></a>
     </div>
   </body>
 </html>
