dynamic drop down

--- a/b8.html
+++ b/b8.html
@@ -15,34 +15,17 @@
     <h1 class="page-title">Make Selection</h1>
     <div class="floorplan-config-selecton" data-building-ac="G">
       <label>Floor</label>
-      <select id="floor">
-        <option value="1"> </option>
+      <select name="floor" id="floor">
+        <option value="">--Select Floor--</option>
         <option value="1">1</option>
         <option value="2">2</option>
       </select>
       <label>Semester</label>
       <select id="semester">
-        <option value=""> </option>
-        <option value="-80">Spring</option>
-        <option value="10">Fall</option>
       </select>
       <label>Year</label>
       <select id="year">
-        <option value=""> </option>
-        <option value="200600">2006</option>
-        <option value="200700">2007</option>
-        <option value="200800">2008</option>
-        <option value="200900">2009</option>
-        <option value="201000">2010</option>
-        <option value="201100">2011</option>
-        <option value="201200">2012</option>
-        <option value="201300">2013</option>
-        <option value="201400">2014</option>
-        <option value="201500">2015</option>
-        <option value="201600">2016</option>
-        <option value="201700">2017</option>
       </select>
-      <button>Go</button>
     </div>
     <iframe class="floorplan" src="G_Floor_1.html"></iframe>
   </body>
