--- a/b1.html
+++ b/b1.html
@@ -15,25 +15,17 @@
     <h1 class="page-title">Make Selection</h1>
     <div class="floorplan-config-selecton" data-building-ac="I">
       <label>Floor</label>
-      <select id="floor">
-        <option value="1"> </option>
-        <option value="1">1</option>
-        <option value="2">2</option>
+      <select name="floor" id="floor">
+        <option value="">--Select Floor--</option>
+        <option value="-1">1</option>
+        <option value="-2">2</option>
       </select>
       <label>Semester</label>
       <select id="semester">
-        <option value=""> </option>
-        <option value="-80">Spring</option>
-        <option value="10">Fall</option>
       </select>
       <label>Year</label>
       <select id="year">
-        <option value=""> </option>
-        <option value="201500">2015</option>
-        <option value="201600">2016</option>
-        <option value="201700">2017</option>
       </select>
-      <button>Go</button>
     </div>
     <iframe class="floorplan" src="I_Floor_1.html"></iframe>
   </body>
