--- a/b1.html
+++ b/b1.html
@@ -30,6 +30,6 @@
         <option value="201610">2016</option>
       </select>
     </div>
-    <iframe class="floorplan" src="floorplans\OS_Floor_1201510.html"></iframe>
+    <iframe class="floorplan" src="floorplans/OS_Floor_1201510.html"></iframe>
   </body>
 </html>
