--- a/b2.html
+++ b/b2.html
@@ -39,6 +39,6 @@
         <option value="201610">2016</option>
       </select>
     </div>
-    <iframe class="floorplan" src="floorplans\DO_Floor_1200610.html"></iframe>
+    <iframe class="floorplan" src="floorplans/DO_Floor_1200610.html"></iframe>
   </body>
 </html>
