update drop down and some renames

--- a/FA.html
+++ b/FA.html
@@ -13,31 +13,27 @@
   <body>
     <a class="back-to-map" href="index.html">Back To Map</a>
     <h1 class="page-title">Make Selection</h1>
-    <div class="floorplan-config-selecton" data-building-ac="CI">
+    <div class="floorplan-config-selecton" data-building-ac="FA">
       <label>Floor</label>
       <select name="floor" id="floor">
-        <option value="1.0">1</option>
-        <option value="2.0">2</option>
+        <option value="1">1</option>
       </select>
       <label>Semester</label>
       <select id="semester">
-        <option value="fallci">Fall</option>
-        <option value="spring">Spring</option>
+        <option value="fallfa">Fall</option>
+        <option value="springfa">Spring</option>
       </select>
       <label>Year</label>
       <select id="year">
-        <option value="200710">2007</option>
-        <option value="200810">2008</option>
-        <option value="200910">2009</option>
-        <option value="201010">2010</option>
-        <option value="201110">2011</option>
-        <option value="201210">2012</option>
-        <option value="201310">2013</option>
-        <option value="201410">2014</option>
-        <option value="201510">2015</option>
         <option value="201610">2016</option>
+        <option value="201510">2015</option>
+        <option value="201410">2014</option>
+        <option value="201310">2013</option>
+        <option value="201210">2012</option>
+        <option value="201110">2011</option>
+        <option value="201010">2010</option>
       </select>
     </div>
-    <iframe class="floorplan" src="FloorPlans/CI_Floor_1200710.html"></iframe>
+    <iframe class="floorplan" src="FloorPlans/FA_Floor_1201010.html"></iframe>
   </body>
 </html>
