--- a/BR.html
+++ b/BR.html
@@ -13,7 +13,7 @@
   <body>
     <a class="back-to-map" href="index.html">Back To Map</a>
     <h1 class="page-title">Make Selection</h1>
-    <div class="floorplan-config-selecton" data-building-ac="CH">
+    <div class="floorplan-config-selecton" data-building-ac="BR">
       <label>Floor</label>
       <select name="floor" id="floor">
         <option value="1">1</option>
@@ -26,19 +26,19 @@
       </select>
       <label>Year</label>
       <select id="year">
-        <option value="200610">2006</option>
-        <option value="200710">2007</option>
-        <option value="200810">2008</option>
-        <option value="200910">2009</option>
-        <option value="201010">2010</option>
-        <option value="201110">2011</option>
-        <option value="201210">2012</option>
-        <option value="201310">2013</option>
-        <option value="201410">2014</option>
-        <option value="201510">2015</option>
         <option value="201610">2016</option>
+        <option value="201510">2015</option>
+        <option value="201410">2014</option>
+        <option value="201310">2013</option>
+        <option value="201210">2012</option>
+        <option value="201110">2011</option>
+        <option value="201010">2010</option>
+        <option value="200910">2009</option>
+        <option value="200810">2008</option>
+        <option value="200710">2007</option>
+        <option value="200610">2006</option>
       </select>
     </div>
-    <iframe class="floorplan" src="FloorPlans/CH_Floor_1200610.html"></iframe>
+    <iframe class="floorplan" src="FloorPlans/BR_Floor_1200610.html"></iframe>
   </body>
 </html>
