--- a/CI.html
+++ b/CI.html
@@ -13,7 +13,7 @@
   <body>
     <a class="back-to-map" href="index.html">Back To Map</a>
     <h1 class="page-title">Make Selection</h1>
-    <div class="floorplan-config-selecton" data-building-ac="MO">
+    <div class="floorplan-config-selecton" data-building-ac="CI">
       <label>Floor</label>
       <select name="floor" id="floor">
         <option value="1">1</option>
@@ -21,24 +21,23 @@
       </select>
       <label>Semester</label>
       <select id="semester">
-        <option value="fall">Fall</option>
+        <option value="fallci">Fall</option>
         <option value="spring">Spring</option>
       </select>
       <label>Year</label>
       <select id="year">
-        <option value="200610">2006</option>
-        <option value="200710">2007</option>
-        <option value="200810">2008</option>
-        <option value="200910">2009</option>
-        <option value="201010">2010</option>
-        <option value="201110">2011</option>
-        <option value="201210">2012</option>
-        <option value="201310">2013</option>
-        <option value="201410">2014</option>
-        <option value="201510">2015</option>
         <option value="201610">2016</option>
+        <option value="201510">2015</option>
+        <option value="201410">2014</option>
+        <option value="201310">2013</option>
+        <option value="201210">2012</option>
+        <option value="201110">2011</option>
+        <option value="201010">2010</option>
+        <option value="200910">2009</option>
+        <option value="200810">2008</option>
+        <option value="200710">2007</option>
       </select>
     </div>
-    <iframe class="floorplan" src="FloorPlans/MO_Floor_1200610.html"></iframe>
+    <iframe class="floorplan" src="FloorPlans/CI_Floor_1200710.html"></iframe>
   </body>
 </html>
