--- a/Map_Page.html
+++ b/Map_Page.html
@@ -10,9 +10,9 @@
   crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/master.js"></script>
   </head>
-   
+
   <body>
-	<a href="Index.html"> Back to Home Page</a>
+	<a href="index.html"> Back to Home Page</a>
     <h1 class="page-title">Please choose an academic building from the campus map  </h1>
     <div class="campus-image">
           <a href="FloorPlans/OS_Floor_1201710.html" title="OS" id ="OS" ><div class="posfix"><span class="centerlet">OS</span></div></a>
