--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class='title'>University Campus Space Utilization</div>
 
 		<div class="Logo-Image">
-			<img src="Uncw_logo.jpg"  width = 350px height = 300px >
+			<img src="UNCW_Logo.jpg"  width = 350px height = 300px >
 		</div>
 
 		<div class="Team_Image">
