--- a/Map_Page.html
+++ b/Map_Page.html
@@ -27,5 +27,10 @@
           <a href="FloorPlans/MC_Floor_1201710.html" title="MC" id ="MC" ><div class="posfix"><span class="centerlet">MC</span></div></a>
           <a href="FloorPlans/TL_Floor_1201710.html" title="TL" id ="TL" ><div class="posfix"><span class="centerlet">TL</span></div></a>
     </div>
+	
+	<div class = 'Building_code'>
+		<img src="building_codes.PNG"  >
+	
+	</div>
   </body>
 </html>
