--- a/Map_Page.html
+++ b/Map_Page.html
@@ -26,11 +26,11 @@
           <a href="FloorPlans/MO_Floor_1201710.html" title="MO" id ="MO" ><div class="posfix"><span class="centerlet">MO</span></div></a>
           <a href="FloorPlans/MC_Floor_1201710.html" title="MC" id ="MC" ><div class="posfix"><span class="centerlet">MC</span></div></a>
           <a href="FloorPlans/TL_Floor_1201710.html" title="TL" id ="TL" ><div class="posfix"><span class="centerlet">TL</span></div></a>
+          <div class = 'Building_code'>
+               <div class="posfix"><span class="centerlet"><img src="building_codes.PNG"  ></span></div>
+          </div>
     </div>
-	
-	<div class = 'Building_code'>
-		<img src="building_codes.PNG"  >
-	
-	</div>
+
+
   </body>
 </html>
