--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 
 	<body>
 		<body bgcolor="#008080">
-		<div class='title'>University Campus Space Utilization</div>
+		<div class='title'>University Campus Space Utilization<br>
+		Practicum for an MS in Data Science
+
+	</div>
 
 		<div class="Logo-Image">
 			<img src="UNCW_Logo.jpg"  width = 350px height = 300px >
